--- a/WodeWinForm/WodeWinForm.csproj
+++ b/WodeWinForm/WodeWinForm.csproj
@@ -62,6 +62,9 @@
     <Compile Include="MyControls\BaseTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MyControls\ButtonEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MyControls\FullTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
