--- a/WodeWinForm/App.config
+++ b/WodeWinForm/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+      <add key="appid" value="" />
+      <add key="secret" value="" />
+      <add key="localhost" value="http://localhost:57526" />
+    </appSettings>
 </configuration>
