--- a/WodeWinForm/App.config
+++ b/WodeWinForm/App.config
@@ -1,11 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
-    <appSettings>
-      <add key="appid" value="" />
-      <add key="secret" value="" />
-      <add key="localhost" value="http://localhost:57526" />
-    </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <appSettings>
+    <add key="appid" value="" />
+    <add key="secret" value="" />
+    <add key="localhost" value="http://localhost:57526" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <!--服务器版本URL-->
+    <add key="ServerFileList" value="http://localhost/Software/FileList.json"/>
+    <!--服务器文件库-->
+    <add key="ServerFileVersion" value="http://localhost/Software/News"/>
+  </appSettings>
+ 
 </configuration>
