--- a/WodeWinForm/WodeWinForm.csproj
+++ b/WodeWinForm/WodeWinForm.csproj
@@ -96,6 +96,9 @@
     <Compile Include="MyControls\ButtonEx.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MyControls\ComboBoxGridView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MyControls\FullTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -125,6 +128,12 @@
     <Compile Include="View\Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Form4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Form4.Designer.cs">
+      <DependentUpon>Form4.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Form4.resx">
+      <DependentUpon>Form4.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
