--- a/WodeWinForm/WodeWinForm.csproj
+++ b/WodeWinForm/WodeWinForm.csproj
@@ -102,6 +102,7 @@
     <Compile Include="MyControls\FullTabControl.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MyControls\MenuTabControl.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
