--- a/WodeWinForm/WodeWinForm.csproj
+++ b/WodeWinForm/WodeWinForm.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PopupTool">
+      <HintPath>..\packages\PopupTool.dll</HintPath>
+    </Reference>
     <Reference Include="SunnyUI, Version=2.2.8.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Lib\SunnyUI.dll</HintPath>
@@ -109,6 +112,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="MyControls\MenuTabControl.cs" />
+    <Compile Include="MyControls\MyGridCombobox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MyControls\MyGridCombobox.Designer.cs">
+      <DependentUpon>MyGridCombobox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -141,11 +150,20 @@
     <Compile Include="View\Form4.Designer.cs">
       <DependentUpon>Form4.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Form5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Form5.Designer.cs">
+      <DependentUpon>Form5.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyControls\MyGridCombobox.resx">
+      <DependentUpon>MyGridCombobox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -163,6 +181,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\Form4.resx">
       <DependentUpon>Form4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Form5.resx">
+      <DependentUpon>Form5.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
